@startuml

class Clientes {
    //Atributos da classe cliente
    -cpf:varchar
    -nomeCompleto:varchar
    -dataNascimento:date
    -telefone:varchar
    -email:varchar
    -cep:varchar
    -logradouro:varchar
    -numero:varchar
    -complemento:varchar
    -bairro:varchar
    -cidade:varchar
    -estado:varchar
    //Para Pessoa Jurídica:
    -razãoSocial:varchar
    -nomeFantasia:varchar
    -cnpj:varchar
    -inscriçãoEstadual:varchar
    -nomeResponsável:varchar

    //metodo da classe cliente
    -insereCliente()
    -alteraCliente()
    -leCliente()
    -deletaCliente()
    -pedeOrcamento()
    -realizaVenda()
    -pagamentoVenda()
}

class Produtos{
    -codigoProduto:int
    -descricao:varchar
    -codCategoria:int
    -marca:varchar
    -unidadeMedida:varchar
    -precoCusto:double
    -precoVenda:double

    -insereProduto()
    -alteraProduto()
    -leProduto()
    -deletaProduto()
}

class Fornecedor{
    -razãoSocial:varchar
    -nomeFantasia:varchar
    -cnpj:varchar
    -inscricaoEstadual:varchar
    -nomeResponsavel:varchar
    -contatoResponsavel:varchar
    -email:varchar
    -cep:varchar
    -logradouro:varchar
    -numero:varchar
    -complemento:varchar
    -bairro:varchar
    -cidade:varchar
    -estado:varchar
    //Dados Bancários (opcional):
    -banco:varchar
    -agencia:varchar
    -contaCorrente:varchar
    -tipoConta:varchar
    -cnpjConta:varchar
    -condiaoPagamento:varchar
    -prazoEntrega:varchar
    -insereFornecedor()
    -alteraFornecedor()
    -leFornecedor()
    -deletaFornecedor()
    -compraProduto()
}

class categoria{
    -codCategoria:int
    -descricao:varchar

    -insereCategoria()
    -alteraCategoria()
    -leCategoria()
    -deletaCategoria()
}

class venda{
    -idVenda:int
    -dataVenda:date
    -codProduto:int
    -quantidade:int
    -preco:double

    -insereVenda()
    -alteraVenda()
    -leVenda()
    -deletaVenda()
    -venda()
}

class Compra{
    -idCompra:int
    -dataCompra:date
    -codProduto:int
    -quantidade:int
    -preco:double


    -insereCompra()
    -alteraCompra()
    -leCompra()
    -deletaCompra()
    -compra(idFornecedor)
}
Clientes "1" -- "0..*" Produtos : compra
Fornecedor "1" -- "0..*" Produtos : vende
@enduml